# linked-lists

./: CMakeLists.txt  README.md
incl/: linked-lists.hpp
ref/: LinkedList.py  pseudocode.md
test/: gtest.cpp
